# workforce

./: README.md  pyproject.toml
.github/workflows/: ci.yml
workforce/: api.py  hooks.py  modules.txt
workforce/communication_tools_module/doctype/meeting_wf/: meeting_wf.js  meeting_wf.json  meeting_wf.py  test_meeting_wf.py
workforce/communication_tools_module/doctype/message_wf/: message_wf.js  message_wf.json  message_wf.py  test_message_wf.py
workforce/communication_tools_module/report/messages/: messages.js  messages.json  messages.py
workforce/performance_evaluation_module/doctype/performance_metrics_wf/: performance_metrics_wf.js  performance_metrics_wf.json  performance_metrics_wf.py  test_performance_metrics_wf.py
workforce/performance_evaluation_module/doctype/performance_review_wf/: performance_review_wf.js  performance_review_wf.json  performance_review_wf.py  test_performance_review_wf.py
workforce/performance_evaluation_module/report/performance_review_report/: performance_review_report.json
workforce/task_management_module/doctype/project_wf/: project_wf.js  project_wf.json  project_wf.py  test_project_wf.py
workforce/task_management_module/doctype/task_list/: task_list.json  task_list.py
workforce/task_management_module/doctype/task_wf/: task_wf.js  task_wf.json  task_wf.py  test_task_wf.py
workforce/task_management_module/report/manager_report/: manager_report.json
workforce/task_management_module/report/project_report/: project_report.json
workforce/time_tracking_module/doctype/timelog/: timelog.json  (+1 more)
workforce/www/: web.html
(+41 files in other folders)
